Update birthday message and chapter content

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="page active" id="page-intro">
             <div class="container">
                 <div class="intro-content">
-                    <h1>Happy Birthday, [Her Name]</h1>
+                    <h1>Happy Birthday Hadia!!</h1>
                     <p class="subheading">This is our story.</p>
                     <div class="button-group">
                         <button class="btn" onclick="showPage('chapter-1')">Begin</button>
@@ -360,7 +360,8 @@
                 <div class="chapter-content">
                     <h2>Chapter I</h2>
                     <p class="chapter-subtitle">The Beginning</p>
-                    <p>Do you remember that moment? When our eyes met and time seemed to pause for just a second. I remember thinking, "This is someone special." Every word you said felt like a song, and with every laugh we shared, I knew my world had just become infinitely more beautiful. You didn't just enter my life—you became my reason to believe in magic again.</p>
+                    <p>Ham filhal sat hain kiu ke kaif ne bola ta ke touje eid mubarak bolu like how unusual and you ghosted me for THREE DAYS REMEMBER YOU PICKLE. I remember the day you told me that you loved me but you were so embarssed
+                    a</p>
                 </div>
             </div>
         </div>
