Change chapter subtitle and revise content
Updated chapter subtitle and modified the chapter content for clarity.

--- a/index.html
+++ b/index.html
@@ -359,9 +359,12 @@
             <div class="container">
                 <div class="chapter-content">
                     <h2>Chapter I</h2>
-                    <p class="chapter-subtitle">The Beginning</p>
+                    <p class="chapter-subtitle">Hamari Shoruat</p>
                     <p>Ham filhal sat hain kiu ke kaif ne bola ta ke touje eid mubarak bolu like how unusual and you ghosted me for THREE DAYS REMEMBER YOU PICKLE. I remember the day you told me that you loved me but you were so embarssed
-                    a</p>
+                    but still you needed some space but u managed to muster up the courage to stay on your word and now we are here. I still can't believe that I found my life partner like your my bestifriend lover partner friend and everything
+                    in one and like ahhh i cant express how much i love you. In the starting ham kitna rok rok ke bat kerte te like we were so hesitant but then slowly we got so comfortable with eachother and now i cant go without a day without 
+                    talking to you and without hearing you voice. This is your first birthday with me hopefully i can make it special for you. Our start was perfect and i remeber that you wanted to tell me you lovec me after our board papers but 
+                    i made you tell me it before that happened. That was our little shoruat</p>
                 </div>
             </div>
         </div>
