Update chapters with new content and subtitles

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     <p>Ham filhal sat hain kiu ke kaif ne bola ta ke touje eid mubarak bolu like how unusual and you ghosted me for THREE DAYS REMEMBER YOU PICKLE. I remember the day you told me that you loved me but you were so embarssed
                     but still you needed some space but u managed to muster up the courage to stay on your word and now we are here. I still can't believe that I found my life partner like your my bestifriend lover partner friend and everything
                     in one and like ahhh i cant express how much i love you. In the starting ham kitna rok rok ke bat kerte te like we were so hesitant but then slowly we got so comfortable with eachother and now i cant go without a day without 
-                    talking to you and without hearing you voice. This is your first birthday with me hopefully i can make it special for you. Our start was perfect and i remeber that you wanted to tell me you lovec me after our board papers but 
+                    talking to you and without hearing you voice. This is your first birthday with me hopefully i can make it special for you. Our start was perfect and i remeber that you wanted to tell me you love me after our board papers but 
                     i made you tell me it before that happened. That was our little shoruat</p>
                 </div>
             </div>
@@ -374,8 +374,11 @@
             <div class="container">
                 <div class="chapter-content">
                     <h2>Chapter II</h2>
-                    <p class="chapter-subtitle">The Distance</p>
-                    <p>Miles between us, yet somehow closer than ever. Every video call, every message, every note in the middle of the night—they were not reminders of distance, but proof that love transcends geography. They say distance tests relationships, but ours only grew stronger. Because what we have is not defined by proximity, but by the depths of our souls choosing each other, again and again, no matter how far apart we are.</p>
+                    <p class="chapter-subtitle">Fasla</p>
+                    <p>ye long distance wala khata thora annoying hai. like im a person who likes physical touch but with you its different like you make me feel special in ways that no matter how far apart we our you still manage to touch my heart
+                    and feelings ke ye fasla hai hi nahi. i bought gifts for you ke chalo hamra meetup hoga but nahi houa abi tak but khair hai. i do want to give you the gifts before you leave the country that is like smth i want want yk. but this 
+                    distance does effect me somtimes but jab bhi hota hai you manage to js make those thoughts go away like pooff thats a quality i love about you. inshallah in the future we will be able to call more and one day live together i cant 
+                    wait for that day. I always imagine how liviing together will feel like. I wanna wake up beside you, hug you, make you breakfast that type of things yk.</p>
                 </div>
             </div>
         </div>
@@ -385,8 +388,10 @@
             <div class="container">
                 <div class="chapter-content">
                     <h2>Chapter III</h2>
-                    <p class="chapter-subtitle">The Growth</p>
-                    <p>You've taught me so much without even trying. You've shown me strength in vulnerability, beauty in imperfection, and courage in loving someone with your whole heart despite the challenges. But mostly, you've taught me what it means to be truly seen by another person. With you, I'm finally learning to love myself the way you love me.</p>
+                    <p class="chapter-subtitle">Maturing</p>
+                    <p>You have mature so much since we met. You have grown into a much better person and look at you now. Your such a mature woman now. You handle your emtions way better now. Because of you i have matured too. I have become a better 
+                    and more mature person in general too. You love me unconditionally and I love you unconditionally too. If you don't believe me then there is a button underneath this paragraph which will give you a reason to why i love you so much
+                    but i dont know why would you need me to give you reasons but I made one anyway you pickel. I love the person you and the person you'll become later on.</p>
                     <button class="btn btn-secondary reason-btn" onclick="showRandomReason()">Give me another reason</button>
                     <div class="reason-display" id="reasonDisplay"></div>
                 </div>
@@ -398,8 +403,11 @@
             <div class="container">
                 <div class="chapter-content chapter-iv">
                     <h2>Chapter IV</h2>
-                    <p class="chapter-subtitle">The Future</p>
-                    <p>I see us in all the moments to come. Waking up beside you, no screens between us. Walking through life hand in hand, facing whatever comes our way together. Building something real, something lasting, something that will make all these nights apart feel like just a moment in a lifetime of memories we'll create together. Our story doesn't end here—it's just getting started.</p>
+                    <p class="chapter-subtitle"> Future</p>
+                    <p>I always picture our future together. In college or when im bored like anywhere. and now i cant see a future without you like i js cant picture a future without you. without you i dont know what ill become or what ill do. you are 
+                    a major part of my life now. Like what i am doing is for our future i didnt care about my future untill my mind couldnt stop pictureing a future without you and i want to give you everything that you want or wanted. I want you to live 
+                    stress free in the future. I want you to be able to go to any shop and buy anything without looking at the price if that makes sense. I always thank allah that he brought you to me and made you my wife. Because without I dont even know 
+                    what i would have been doing right now. I am thankfull for you from the bottom of my heart for being my future wife and the mother of our kid or kids idk yet and yes ill still annoy you about it hehehe.</p>
                 </div>
             </div>
         </div>
