Update birthday message in index.html

--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
         <div class="page" id="chapter-5">
             <div class="container">
                 <div class="finale-content">
-                    <h2>No matter the distance,<br>I choose you.<br>Every single day.</h2>
-                    <p>Happy Birthday to the love of my life.</p>
+                    <h2>No matter the distance,<br>I'll choose you.<br>Every single day.</h2>
+                    <p>Happy Birthday to the love of my life(pickle,goblin,shorty,wifie,rondi).</p>
                 </div>
             </div>
         </div>
